tests/esproposal_export_star_as.enable/__snapshots__/jsfmt.spec.js.snap
exports[`test dest.js 1`] = `
"// @flow

import {source} from \"./test\";

var a: number = source.num;
var b: string = source.num; // Error: num ~> string

var c: string = source.str;
var d: number = source.str; // Error: num ~> string
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
// @flow
import { source } from \"./test\";
var a: number = source.num;
var b: string = source.num;// Error: num ~> string
var c: string = source.str;
var d: number = source.str;// Error: num ~> string

"
`;

exports[`test source.js 1`] = `
"// @flow

export var str = \'asdf\';
export var num = 42;
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
// @flow
export var str = \"asdf\";
export var num = 42;

"
`;

exports[`test test.js 1`] = `
"// @flow

export * as source from \"./source\";
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/src/printer.js:1785
        fromString(\", \").join(path.map(print, \"specifiers\")),
                         ^

TypeError: fromString(...).join is not a function
    at printExportDeclaration (/src/printer.js:1785:26)
    at genericPrintNoParens (/src/printer.js:488:14)
    at genericPrint (/src/printer.js:166:7)
    at p (/src/printer.js:111:37)
    at exports.printComments (/src/comments.js:327:20)
    at printGenerically (/src/printer.js:111:12)
    at /src/printer.js:1601:18
    at FastPath.map (/src/fast-path.js:167:19)
    at printStatementSequence (/src/printer.js:1586:8)
    at /src/printer.js:238:16
"
`;
